1.20.1 fixes